--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,8 +2,14 @@
 
 <h1><%= @post.title %></h1>
 
+<div class="row">
+  <div class="span8">
+    <p><%= @post.body %></p>
+  </div>
+  <div class="span4">
+
 <% if can? :edit, @post %>
-  <%= link_to "Edit", edit_post_path(@post), class: 'btn btn-mini' %>
+  <%= link_to "Edit", edit_post_path(@post), class: 'btn btn-large btn-block' %>
 <% end %>
 
 <p><%= @post.body %></p>
