--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,15 +4,17 @@
   <%= devise_error_messages! %>
 
   <div class="control-group">
-    <%= f.label :email, class: 'control-label' %>
+    <%= f.label :name, class: 'control-label' %>
     <div class="controls">
-      <%= f.email_field :email, :autofocus => true %>
+      <%= f.text_field :email, :autofocus => true %>
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :password, class: 'control-label' %>
+    <%= f.label :email, class: 'control-label' %>
     <div class="controls">
-      <%= f.password_field :password %>
+       - <%= f.email_field :email, :autofocus => true %>
+
+     + <%= f.email_field :email %> 
     </div>
   </div>
   <div class="control-group">
