--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,6 +4,11 @@
 
 <div class="row">
   <div class="span8">
+    <small>
+      <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
+      submitted <%= time_ago_in_words(@post.created_at) %> ago by 
+      <%= @post.user.name %>
+    </small>
     <p><%= markdown @post.body %></p>
   </div>
   <div class="span4">
@@ -12,4 +17,5 @@
   <%= link_to "Edit", edit_post_path(@post), class: 'btn btn-large btn-block' %>
 <% end %>
 
-<p><%= @post.body %></p>
+</div>
+</div>
