--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -6,6 +6,12 @@
 
 <div class="row">
   <div class="span8">
+              <small>
+            <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
+            submitted <%= time_ago_in_words(post.created_at) %> ago by 
+            <%= post.user.name %><br/>
+            <%= post.comments.count %> Comments
+          </small>
     <p class="lead"><%= @topic.description %></p>
     <% @posts.each do |post| %>
       <div class="media">
