--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,3 @@
-# posts/show.html.erb
 
 <h1><%= markdown @post.title %></h1>
 
@@ -9,23 +8,10 @@
       submitted <%= time_ago_in_words(@post.created_at) %> ago by 
       <%= @post.user.name %>
     </small>
-    <p><%= markdown @post.body %></p>
-  
-</div>
-  <div class="span4">
 
+     <p><%=markdown @post.body %></p>
+   </div>
 
-
-<div class="row">
-  <div class="span8">
-    <small>
-      <%= image_tag(@post.user.image.tiny.url) if @post.user.image? %>
-      submitted <%= time_ago_in_words(@post.created_at) %> ago by 
-      <%= @post.user.name %>
-    </small>
-    <p><%= markdown @post.body %></p>
-  
-</div>
   <div class="span4">
 
 
@@ -34,7 +20,7 @@
 
 
 <% if can? :edit, @post %>
-  <%= link_to "Edit", edit_post_path(@post), class: 'btn btn-large btn-block' %>
+  <%= link_to "Edit", edit_post_path(@topic,@post), class: 'btn btn-large btn-block' %>
 <% end %>
 
 </div>
