--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -6,32 +6,32 @@
 
 <div class="row">
   <div class="span8">
-              <small>
+               <p class="lead"><%= @topic.description %></p>
+     <% @posts.each do |post| %>
+       <div class="media">
+       <div class="media-body">
+          <h4 class="media-heading">
+            <%= link_to (markdown post.title), [@topic, post] %>
+          </h4>
+          <small>
             <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
             submitted <%= time_ago_in_words(post.created_at) %> ago by 
             <%= post.user.name %><br/>
             <%= post.comments.count %> Comments
           </small>
-     <small>
-     <%= image_tag(post.user.image.tiny.url) if post.user.image? %>
-            submitted <%= time_ago_in_words(post.created_at) %> ago by 
-            <%= post.user.name %><br/>
-            <%= post.comments.count %> Comments
-         <small>
-    submitted <%= time_ago_in_words(post.created_at) %> ago by <%= post.user.name %><br/>
-    <%= post.comments.count %> Comments
-  </small>
+    
+    
         </div>
       </div>
     <% end %>
-    <%= will_paginate @posts %>
+   
   </div>
   <div class="span4">
     <% if can? :create, Post %>
       <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-large btn-block' %>
   
-   <% end %>
-   </div>
+      <% end %>
+    </div>
    </div>
 
 
